Add hard-coded primary key to all fixtures

--- a/app/host/fixtures/example/2010ag.yaml
+++ b/app/host/fixtures/example/2010ag.yaml
@@ -1,195 +1,292 @@
 - model: host.Host
+  pk: 1
   fields:
     name: UGC 10679
     redshift: 0.03369
-    ra_deg: 255.9710000
+    ra_deg: 255.971
     dec_deg: 31.4990417
 - model: host.Transient
+  pk: 1
   fields:
     name: 2010ag
     tns_id: 1
-    public_timestamp: 2010-03-05 00:00:00.000+00:00
+    public_timestamp: 2010-03-05 00:00:00+00:00
     tns_prefix: SN
     ra_deg: 255.97346
     dec_deg: 31.50172
-    tasks_initialized: True
+    tasks_initialized: true
     spectroscopic_class: SN Ia
-    host: [UGC 10679]
+    host:
+    - UGC 10679
 - model: host.TaskRegister
+  pk: 1
   fields:
-    transient: [2010ag]
-    task: [Transient MWEBV]
-    status: [not processed]
-    last_modified: 1999-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ag
+    task:
+    - Transient MWEBV
+    status:
+    - not processed
+    last_modified: 1999-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 45.0
 - model: host.TaskRegister
+  pk: 2
   fields:
-    transient: [2010ag]
-    task: [Host match]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ag
+    task:
+    - Host match
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 1.0
 - model: host.TaskRegister
+  pk: 3
   fields:
-    transient: [2010ag]
-    task: [Host MWEBV]
-    status: [not processed]
-    last_modified: 1998-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ag
+    task:
+    - Host MWEBV
+    status:
+    - not processed
+    last_modified: 1998-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 35.0
 - model: host.TaskRegister
+  pk: 4
   fields:
-    transient: [2010ag]
-    task: [Cutout download]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ag
+    task:
+    - Cutout download
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 10.0
 - model: host.TaskRegister
+  pk: 5
   fields:
-    transient: [2010ag]
-    task: [Host information]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ag
+    task:
+    - Host information
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 2.0
 - model: host.TaskRegister
+  pk: 6
   fields:
-    transient: [2010ag]
-    task: [Global aperture photometry]
-    status: [not processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ag
+    task:
+    - Global aperture photometry
+    status:
+    - not processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 11.2323
 - model: host.TaskRegister
+  pk: 7
   fields:
-    transient: [2010ag]
-    task: [Local aperture photometry]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ag
+    task:
+    - Local aperture photometry
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 0.03
 - model: host.TaskRegister
+  pk: 8
   fields:
-    transient: [2010ag]
-    task: [Global host SED inference]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ag
+    task:
+    - Global host SED inference
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 0.004
 - model: host.TaskRegister
+  pk: 9
   fields:
-    transient: [2010ag]
-    task: [Local host SED inference]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ag
+    task:
+    - Local host SED inference
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 100.0
 - model: host.TaskRegister
+  pk: 10
   fields:
-    transient: [2010ag]
-    task: [Transient information]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ag
+    task:
+    - Transient information
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 60.0
 - model: host.Cutout
+  pk: 1
   fields:
-      name: 2010ag_PanSTARRS_g
-      filter: [PanSTARRS_g]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/PanSTARRS/PanSTARRS_g.fits
+    name: 2010ag_PanSTARRS_g
+    filter:
+    - PanSTARRS_g
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/PanSTARRS/PanSTARRS_g.fits
 - model: host.Cutout
+  pk: 2
   fields:
-      name: 2010ag_PanSTARRS_r
-      filter: [PanSTARRS_r]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/PanSTARRS/PanSTARRS_r.fits
+    name: 2010ag_PanSTARRS_r
+    filter:
+    - PanSTARRS_r
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/PanSTARRS/PanSTARRS_r.fits
 - model: host.Cutout
+  pk: 3
   fields:
-      name: 2010ag_PanSTARRS_i
-      filter: [PanSTARRS_i]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/PanSTARRS/PanSTARRS_i.fits
+    name: 2010ag_PanSTARRS_i
+    filter:
+    - PanSTARRS_i
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/PanSTARRS/PanSTARRS_i.fits
 - model: host.Cutout
+  pk: 4
   fields:
-      name: 2010ag_PanSTARRS_z
-      filter: [PanSTARRS_z]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_z.fits
+    name: 2010ag_PanSTARRS_z
+    filter:
+    - PanSTARRS_z
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_z.fits
 - model: host.Cutout
+  pk: 5
   fields:
-      name: 2010ag_PanSTARRS_y
-      filter: [PanSTARRS_y]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/PanSTARRS/PanSTARRS_y.fits
+    name: 2010ag_PanSTARRS_y
+    filter:
+    - PanSTARRS_y
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/PanSTARRS/PanSTARRS_y.fits
 - model: host.Cutout
+  pk: 6
   fields:
-      name: 2010ag_SDSS_u
-      filter: [SDSS_u]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/SDSS/SDSS_u.fits
+    name: 2010ag_SDSS_u
+    filter:
+    - SDSS_u
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/SDSS/SDSS_u.fits
 - model: host.Cutout
+  pk: 7
   fields:
-      name: 2010ag_SDSS_r
-      filter: [SDSS_r]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/SDSS/SDSS_r.fits
+    name: 2010ag_SDSS_r
+    filter:
+    - SDSS_r
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/SDSS/SDSS_r.fits
 - model: host.Cutout
+  pk: 8
   fields:
-      name: 2010ag_SDSS_i
-      filter: [SDSS_i]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/SDSS/SDSS_i.fits
+    name: 2010ag_SDSS_i
+    filter:
+    - SDSS_i
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/SDSS/SDSS_i.fits
 - model: host.Cutout
+  pk: 9
   fields:
-      name: 2010H_SDSS_z
-      filter: [SDSS_z]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010H/SDSS/SDSS_z.fits
+    name: 2010H_SDSS_z
+    filter:
+    - SDSS_z
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010H/SDSS/SDSS_z.fits
 - model: host.Cutout
+  pk: 10
   fields:
-      name: 2010ag_GALEX_NUV
-      filter: [GALEX_NUV]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/GALEX/GALEX_NUV.fits
+    name: 2010ag_GALEX_NUV
+    filter:
+    - GALEX_NUV
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/GALEX/GALEX_NUV.fits
 - model: host.Cutout
+  pk: 11
   fields:
-      name: 2010ag_GALEX_FUV
-      filter: [GALEX_FUV]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/GALEX/GALEX_FUV.fits
+    name: 2010ag_GALEX_FUV
+    filter:
+    - GALEX_FUV
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/GALEX/GALEX_FUV.fits
 - model: host.Cutout
+  pk: 12
   fields:
-      name: 2010ag_2MASS_J
-      filter: [2MASS_J]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/2MASS/2MASS_J.fits
+    name: 2010ag_2MASS_J
+    filter:
+    - 2MASS_J
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/2MASS/2MASS_J.fits
 - model: host.Cutout
+  pk: 13
   fields:
-      name: 2010ag_2MASS_H
-      filter: [2MASS_H]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/2MASS/2MASS_H.fits
+    name: 2010ag_2MASS_H
+    filter:
+    - 2MASS_H
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/2MASS/2MASS_H.fits
 - model: host.Cutout
+  pk: 14
   fields:
-      name: 2010ag_2MASS_K
-      filter: [2MASS_K]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/2MASS/2MASS_K.fits
+    name: 2010ag_2MASS_K
+    filter:
+    - 2MASS_K
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/2MASS/2MASS_K.fits
 - model: host.Cutout
+  pk: 15
   fields:
-      name: 2010ag_WISE_W1
-      filter: [WISE_W1]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/WISE/WISE_W1.fits
+    name: 2010ag_WISE_W1
+    filter:
+    - WISE_W1
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/WISE/WISE_W1.fits
 - model: host.Cutout
+  pk: 16
   fields:
-      name: 2010ag_WISE_W2
-      filter: [WISE_W2]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/WISE/WISE_W2.fits
+    name: 2010ag_WISE_W2
+    filter:
+    - WISE_W2
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/WISE/WISE_W2.fits
 - model: host.Cutout
+  pk: 17
   fields:
-      name: 2010H_WISE_W3
-      filter: [WISE_W3]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/WISE/WISE_W3.fits
+    name: 2010H_WISE_W3
+    filter:
+    - WISE_W3
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/WISE/WISE_W3.fits
 - model: host.Cutout
+  pk: 18
   fields:
-      name: 2010H_WISE_W4
-      filter: [WISE_W4]
-      transient: [2010ag]
-      fits: /data/cutout_cdn/2010ag/WISE/WISE_W4.fits
+    name: 2010H_WISE_W4
+    filter:
+    - WISE_W4
+    transient:
+    - 2010ag
+    fits: /data/cutout_cdn/2010ag/WISE/WISE_W4.fits
