--- a/app/host/fixtures/example/2010ai.yaml
+++ b/app/host/fixtures/example/2010ai.yaml
@@ -1,188 +1,283 @@
 - model: host.Transient
+  pk: 2
   fields:
     name: 2010ai
     tns_id: 2
-    public_timestamp: 2010-03-08 00:00:00.000+00:00
+    public_timestamp: 2010-03-08 00:00:00+00:00
     tns_prefix: SN
     ra_deg: 194.85012
     dec_deg: 27.99642
-    tasks_initialized: True
+    tasks_initialized: true
     spectroscopic_class: SN Ia
 - model: host.TaskRegister
+  pk: 11
   fields:
-    transient: [2010ai]
-    task: [Transient MWEBV]
-    status: [not processed]
-    last_modified: 1999-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ai
+    task:
+    - Transient MWEBV
+    status:
+    - not processed
+    last_modified: 1999-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 45.0
 - model: host.TaskRegister
+  pk: 12
   fields:
-    transient: [2010ai]
-    task: [Host match]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ai
+    task:
+    - Host match
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 1.0
 - model: host.TaskRegister
+  pk: 13
   fields:
-    transient: [2010ai]
-    task: [Host MWEBV]
-    status: [not processed]
-    last_modified: 1998-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ai
+    task:
+    - Host MWEBV
+    status:
+    - not processed
+    last_modified: 1998-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 35.0
 - model: host.TaskRegister
+  pk: 14
   fields:
-    transient: [2010ai]
-    task: [Cutout download]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ai
+    task:
+    - Cutout download
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 10.0
 - model: host.TaskRegister
+  pk: 15
   fields:
-    transient: [2010ai]
-    task: [Host information]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ai
+    task:
+    - Host information
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 2.0
 - model: host.TaskRegister
+  pk: 16
   fields:
-    transient: [2010ai]
-    task: [Global aperture photometry]
-    status: [not processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ai
+    task:
+    - Global aperture photometry
+    status:
+    - not processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 11.2323
 - model: host.TaskRegister
+  pk: 17
   fields:
-    transient: [2010ai]
-    task: [Local aperture photometry]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ai
+    task:
+    - Local aperture photometry
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 0.03
 - model: host.TaskRegister
+  pk: 18
   fields:
-    transient: [2010ai]
-    task: [Global host SED inference]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ai
+    task:
+    - Global host SED inference
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 0.004
 - model: host.TaskRegister
+  pk: 19
   fields:
-    transient: [2010ai]
-    task: [Local host SED inference]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ai
+    task:
+    - Local host SED inference
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 100.0
 - model: host.TaskRegister
+  pk: 20
   fields:
-    transient: [2010ai]
-    task: [Transient information]
-    status: [processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2010ai
+    task:
+    - Transient information
+    status:
+    - processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
     last_processing_time_seconds: 50.0
 - model: host.Cutout
+  pk: 19
   fields:
-      name: 2010ai_PanSTARRS_g
-      filter: [PanSTARRS_g]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/PanSTARRS/PanSTARRS_g.fits
+    name: 2010ai_PanSTARRS_g
+    filter:
+    - PanSTARRS_g
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/PanSTARRS/PanSTARRS_g.fits
 - model: host.Cutout
+  pk: 20
   fields:
-      name: 2010ai_PanSTARRS_r
-      filter: [PanSTARRS_r]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/PanSTARRS/PanSTARRS_r.fits
+    name: 2010ai_PanSTARRS_r
+    filter:
+    - PanSTARRS_r
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/PanSTARRS/PanSTARRS_r.fits
 - model: host.Cutout
+  pk: 21
   fields:
-      name: 2010ai_PanSTARRS_i
-      filter: [PanSTARRS_i]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/PanSTARRS/PanSTARRS_i.fits
+    name: 2010ai_PanSTARRS_i
+    filter:
+    - PanSTARRS_i
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/PanSTARRS/PanSTARRS_i.fits
 - model: host.Cutout
+  pk: 22
   fields:
-      name: 2010ai_PanSTARRS_z
-      filter: [PanSTARRS_z]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/PanSTARRS/PanSTARRS_z.fits
+    name: 2010ai_PanSTARRS_z
+    filter:
+    - PanSTARRS_z
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/PanSTARRS/PanSTARRS_z.fits
 - model: host.Cutout
+  pk: 23
   fields:
-      name: 2010ai_PanSTARRS_y
-      filter: [PanSTARRS_y]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/PanSTARRS/PanSTARRS_y.fits
+    name: 2010ai_PanSTARRS_y
+    filter:
+    - PanSTARRS_y
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/PanSTARRS/PanSTARRS_y.fits
 - model: host.Cutout
+  pk: 24
   fields:
-      name: 2010ai_SDSS_u
-      filter: [SDSS_u]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/SDSS/SDSS_u.fits
+    name: 2010ai_SDSS_u
+    filter:
+    - SDSS_u
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/SDSS/SDSS_u.fits
 - model: host.Cutout
+  pk: 25
   fields:
-      name: 2010ai_SDSS_r
-      filter: [SDSS_r]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/SDSS/SDSS_r.fits
+    name: 2010ai_SDSS_r
+    filter:
+    - SDSS_r
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/SDSS/SDSS_r.fits
 - model: host.Cutout
+  pk: 26
   fields:
-      name: 2010ai_SDSS_i
-      filter: [SDSS_i]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/SDSS/SDSS_i.fits
+    name: 2010ai_SDSS_i
+    filter:
+    - SDSS_i
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/SDSS/SDSS_i.fits
 - model: host.Cutout
+  pk: 27
   fields:
-      name: 2010ai_SDSS_z
-      filter: [SDSS_z]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/SDSS/SDSS_z.fits
+    name: 2010ai_SDSS_z
+    filter:
+    - SDSS_z
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/SDSS/SDSS_z.fits
 - model: host.Cutout
+  pk: 28
   fields:
-      name: 2010ai_GALEX_NUV
-      filter: [GALEX_NUV]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/GALEX/GALEX_NUV.fits
+    name: 2010ai_GALEX_NUV
+    filter:
+    - GALEX_NUV
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/GALEX/GALEX_NUV.fits
 - model: host.Cutout
+  pk: 29
   fields:
-      name: 2010ai_GALEX_FUV
-      filter: [GALEX_FUV]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/GALEX/GALEX_FUV.fits
+    name: 2010ai_GALEX_FUV
+    filter:
+    - GALEX_FUV
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/GALEX/GALEX_FUV.fits
 - model: host.Cutout
+  pk: 30
   fields:
-      name: 2010ai_2MASS_J
-      filter: [2MASS_J]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/2MASS/2MASS_J.fits
+    name: 2010ai_2MASS_J
+    filter:
+    - 2MASS_J
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/2MASS/2MASS_J.fits
 - model: host.Cutout
+  pk: 31
   fields:
-      name: 2010ai_2MASS_H
-      filter: [2MASS_H]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/2MASS/2MASS_H.fits
+    name: 2010ai_2MASS_H
+    filter:
+    - 2MASS_H
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/2MASS/2MASS_H.fits
 - model: host.Cutout
+  pk: 32
   fields:
-      name: 2010ai_2MASS_K
-      filter: [2MASS_K]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/2MASS/2MASS_K.fits
+    name: 2010ai_2MASS_K
+    filter:
+    - 2MASS_K
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/2MASS/2MASS_K.fits
 - model: host.Cutout
+  pk: 33
   fields:
-      name: 2010ai_WISE_W1
-      filter: [WISE_W1]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/WISE/WISE_W1.fits
+    name: 2010ai_WISE_W1
+    filter:
+    - WISE_W1
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/WISE/WISE_W1.fits
 - model: host.Cutout
+  pk: 34
   fields:
-      name: 2010ai_WISE_W2
-      filter: [WISE_W2]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/WISE/WISE_W2.fits
+    name: 2010ai_WISE_W2
+    filter:
+    - WISE_W2
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/WISE/WISE_W2.fits
 - model: host.Cutout
+  pk: 35
   fields:
-      name: 2010ai_WISE_W3
-      filter: [WISE_W3]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/WISE/WISE_W3.fits
+    name: 2010ai_WISE_W3
+    filter:
+    - WISE_W3
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/WISE/WISE_W3.fits
 - model: host.Cutout
+  pk: 36
   fields:
-      name: 2010ai_WISE_W4
-      filter: [WISE_W4]
-      transient: [2010ai]
-      fits: /data/cutout_cdn/2010ai/WISE/WISE_W4.fits
+    name: 2010ai_WISE_W4
+    filter:
+    - WISE_W4
+    transient:
+    - 2010ai
+    fits: /data/cutout_cdn/2010ai/WISE/WISE_W4.fits
