--- a/app/host/fixtures/initial/setup_acknowledgements.yaml
+++ b/app/host/fixtures/initial/setup_acknowledgements.yaml
@@ -7,7 +7,8 @@
     website_url: https://www.astropy.org
     paper_url: https://ui.adsabs.harvard.edu/abs/2018AJ....156..123A/abstract
     doi: 10.3847/1538-3881/aabc4f
-    acknowledgement_text: This research made use of Astropy, (http://www.astropy.org) a community-developed core Python package for Astronomy.
+    acknowledgement_text: This research made use of Astropy, (http://www.astropy.org)
+      a community-developed core Python package for Astronomy.
 - model: host.Acknowledgement
   pk: 2
   fields:
@@ -25,7 +26,7 @@
     repository_url: https://github.com/uiucsn/astro_ghost
     website_url: https://ghost.ncsa.illinois.edu
     paper_url: https://ui.adsabs.harvard.edu/abs/2021ApJ...908..170G/abstract
-    doi:  10.3847/1538-4357/abd02b
+    doi: 10.3847/1538-4357/abd02b
 - model: host.Acknowledgement
   pk: 4
   fields:
@@ -33,9 +34,10 @@
     description: Used for the host aperture photometry
     repository_url: https://github.com/astropy/photutils
     website_url: https://photutils.readthedocs.io/en/stable/
-    paper_url:  https://ui.adsabs.harvard.edu/abs/2022zndo....596036B/abstract
+    paper_url: https://ui.adsabs.harvard.edu/abs/2022zndo....596036B/abstract
     doi: 10.5281/zenodo.6385735
-    acknowledgement_text: This research made use of Photutils, an Astropy package for detection and photometry of astronomical sources (Bradley et al. 2020).
+    acknowledgement_text: This research made use of Photutils, an Astropy package
+      for detection and photometry of astronomical sources (Bradley et al. 2020).
 - model: host.Acknowledgement
   pk: 5
   fields:
@@ -54,7 +56,10 @@
     website_url: https://hips.readthedocs.io
     paper_url: https://ui.adsabs.harvard.edu/abs/2015A%26A...578A.114F/abstract
     doi: 10.1051/0004-6361/201526075
-    acknowledgement_text: The HiOS package is being developed as part of Google Summer of Code 2017 program by Adeel Ahmad, with Thomas Boch (CDS, Strasbourg) and Christoph Deil (MPIK, Heidelberg) as mentors. We would like to thank Google, CDS, MPIK for their support!
+    acknowledgement_text: The HiOS package is being developed as part of Google Summer
+      of Code 2017 program by Adeel Ahmad, with Thomas Boch (CDS, Strasbourg) and
+      Christoph Deil (MPIK, Heidelberg) as mentors. We would like to thank Google,
+      CDS, MPIK for their support!
 - model: host.Acknowledgement
   pk: 7
   fields:
@@ -63,7 +68,7 @@
     repository_url: https://github.com/joshspeagle/dynesty
     website_url: https://dynesty.readthedocs.io/en/latest/
     paper_url: https://ui.adsabs.harvard.edu/abs/2020MNRAS.493.3132S/abstract
-    doi:  10.1093/mnras/staa278
+    doi: 10.1093/mnras/staa278
 - model: host.Acknowledgement
   pk: 8
   fields:
