--- a/app/host/fixtures/initial/setup_catalog_data.yaml
+++ b/app/host/fixtures/initial/setup_catalog_data.yaml
@@ -1,216 +1,300 @@
 - model: host.Catalog
+  pk: 1
   fields:
     name: 2MASS_extended_source
-    survey: [2MASS]
+    survey:
+    - 2MASS
     vizier_id: VII/233
     id_column: 2MASX
     ra_column: RAJ2000
     dec_column: DEJ2000
 - model: host.Catalog
+  pk: 2
   fields:
     name: ALLWISE
-    survey: [WISE]
+    survey:
+    - WISE
     vizier_id: II/328
     id_column: AllWISE
     ra_column: RAJ2000
     dec_column: DEJ2000
 - model: host.Catalog
+  pk: 3
   fields:
     name: GALEX_source
-    survey: [GALEX]
+    survey:
+    - GALEX
     vizier_id: II/335/galex_ais
     id_column: objid
     ra_column: RAJ2000
     dec_column: DEJ2000
 - model: host.Catalog
+  pk: 4
   fields:
     name: PanSTARRS_DR2
-    survey: [PanSTARRS]
+    survey:
+    - PanSTARRS
     vizier_id: II/349
     id_column: objID
     ra_column: RAJ2000
     dec_column: DEJ2000
 - model: host.Catalog
+  pk: 5
   fields:
     name: SDSS_DR17
-    survey: [SDSS]
+    survey:
+    - SDSS
     vizier_id: V/147
     id_column: objID
     ra_column: RA_ICRS
     dec_column: RA_ICRS
 - model: host.Catalog
+  pk: 6
   fields:
     name: DES_DR1
-    survey: [DES]
+    survey:
+    - DES
     vizier_id: II/357
     id_column: DES
     ra_column: RAJ2000
     dec_column: RAJ2000
 - model: host.CatalogPhotometry
+  pk: 1
   fields:
     name: 2MASS_H_extended_source_K20
-    filter: [2MASS_H]
-    catalog: [2MASS_extended_source]
+    filter:
+    - 2MASS_H
+    catalog:
+    - 2MASS_extended_source
     mag_column: H.K20e
     mag_error_column: e_H.K20e
 - model: host.CatalogPhotometry
+  pk: 2
   fields:
     name: 2MASS_J_extended_source_K20
-    filter: [2MASS_J]
-    catalog: [2MASS_extended_source]
+    filter:
+    - 2MASS_J
+    catalog:
+    - 2MASS_extended_source
     mag_column: J.K20e
     mag_error_column: e_J.K20e
 - model: host.CatalogPhotometry
+  pk: 3
   fields:
     name: 2MASS_K_extended_source_K20
-    filter: [2MASS_K]
-    catalog: [2MASS_extended_source]
+    filter:
+    - 2MASS_K
+    catalog:
+    - 2MASS_extended_source
     mag_column: K.K20e
     mag_error_column: e_K.K20e
 - model: host.CatalogPhotometry
+  pk: 4
   fields:
     name: WISE_W1_ALLWISE_APER
-    filter: [WISE_W1]
-    catalog: [ALLWISE]
+    filter:
+    - WISE_W1
+    catalog:
+    - ALLWISE
     mag_column: W1mag
     mag_error_column: e_W1mag
 - model: host.CatalogPhotometry
+  pk: 5
   fields:
     name: WISE_W2_ALLWISE_APER
-    filter: [WISE_W2]
-    catalog: [ALLWISE]
+    filter:
+    - WISE_W2
+    catalog:
+    - ALLWISE
     mag_column: W2mag
     mag_error_column: e_W2mag
 - model: host.CatalogPhotometry
+  pk: 6
   fields:
     name: WISE_W3_ALLWISE_APER
-    filter: [WISE_W3]
-    catalog: [ALLWISE]
+    filter:
+    - WISE_W3
+    catalog:
+    - ALLWISE
     mag_column: W3mag
     mag_error_column: e_W3mag
 - model: host.CatalogPhotometry
+  pk: 7
   fields:
     name: WISE_W4_ALLWISE_APER
-    filter: [WISE_W4]
-    catalog: [ALLWISE]
+    filter:
+    - WISE_W4
+    catalog:
+    - ALLWISE
     mag_column: W4mag
     mag_error_column: e_W4mag
 - model: host.CatalogPhotometry
+  pk: 8
   fields:
     name: GALEX_NUV_source_APER
-    filter: [GALEX_NUV]
-    catalog: [GALEX_source]
+    filter:
+    - GALEX_NUV
+    catalog:
+    - GALEX_source
     mag_column: NUV.a
     mag_error_column: e_NUV.a
 - model: host.CatalogPhotometry
+  pk: 9
   fields:
     name: GALEX_FUV_source_APER
-    filter: [GALEX_FUV]
-    catalog: [GALEX_source]
+    filter:
+    - GALEX_FUV
+    catalog:
+    - GALEX_source
     mag_column: FUV.a
     mag_error_column: e_FUV.a
 - model: host.CatalogPhotometry
+  pk: 10
   fields:
     name: PanSTARRS_g_DR2_KRON
-    filter: [PanSTARRS_g]
-    catalog: [PanSTARRS_DR2]
+    filter:
+    - PanSTARRS_g
+    catalog:
+    - PanSTARRS_DR2
     mag_column: gKmag
     mag_error_column: e_gKmag
 - model: host.CatalogPhotometry
+  pk: 11
   fields:
     name: PanSTARRS_r_DR2_KRON
-    filter: [PanSTARRS_r]
-    catalog: [PanSTARRS_DR2]
+    filter:
+    - PanSTARRS_r
+    catalog:
+    - PanSTARRS_DR2
     mag_column: rKmag
     mag_error_column: e_rKmag
 - model: host.CatalogPhotometry
+  pk: 12
   fields:
     name: PanSTARRS_i_DR2_KRON
-    filter: [PanSTARRS_i]
-    catalog: [PanSTARRS_DR2]
+    filter:
+    - PanSTARRS_i
+    catalog:
+    - PanSTARRS_DR2
     mag_column: iKmag
     mag_error_column: e_iKmag
 - model: host.CatalogPhotometry
+  pk: 13
   fields:
     name: PanSTARRS_z_DR2_KRON
-    filter: [PanSTARRS_z]
-    catalog: [PanSTARRS_DR2]
+    filter:
+    - PanSTARRS_z
+    catalog:
+    - PanSTARRS_DR2
     mag_column: zKmag
     mag_error_column: e_zKmag
 - model: host.CatalogPhotometry
+  pk: 14
   fields:
     name: PanSTARRS_y_DR1_KRON
-    filter: [PanSTARRS_y]
-    catalog: [PanSTARRS_DR2]
+    filter:
+    - PanSTARRS_y
+    catalog:
+    - PanSTARRS_DR2
     mag_column: yKmag
     mag_error_column: e_yKmag
 - model: host.CatalogPhotometry
+  pk: 15
   fields:
     name: SDSS_u_DR17_P
-    filter: [SDSS_u]
-    catalog: [SDSS_DR17]
+    filter:
+    - SDSS_u
+    catalog:
+    - SDSS_DR17
     mag_column: uPmag
     mag_error_column: e_uPmag
 - model: host.CatalogPhotometry
+  pk: 16
   fields:
     name: SDSS_g_DR17_P
-    filter: [SDSS_g]
-    catalog: [SDSS_DR17]
+    filter:
+    - SDSS_g
+    catalog:
+    - SDSS_DR17
     mag_column: gPmag
     mag_error_column: e_gPmag
 - model: host.CatalogPhotometry
+  pk: 17
   fields:
     name: SDSS_r_DR17_P
-    filter: [SDSS_r]
-    catalog: [SDSS_DR17]
+    filter:
+    - SDSS_r
+    catalog:
+    - SDSS_DR17
     mag_column: rPmag
     mag_error_column: e_rPmag
 - model: host.CatalogPhotometry
+  pk: 18
   fields:
     name: SDSS_z_DR17_P
-    filter: [SDSS_z]
-    catalog: [SDSS_DR17]
+    filter:
+    - SDSS_z
+    catalog:
+    - SDSS_DR17
     mag_column: zPmag
     mag_error_column: e_zPmag
 - model: host.CatalogPhotometry
+  pk: 19
   fields:
     name: SDSS_i_DR17_P
-    filter: [SDSS_i]
-    catalog: [SDSS_DR17]
+    filter:
+    - SDSS_i
+    catalog:
+    - SDSS_DR17
     mag_column: iPmag
     mag_error_column: e_iPmag
 - model: host.CatalogPhotometry
+  pk: 20
   fields:
     name: DES_g_DR1_APER
-    filter: [DES_g]
-    catalog: [DES_DR1]
+    filter:
+    - DES_g
+    catalog:
+    - DES_DR1
     mag_column: gmag
     mag_error_column: e_gmag
 - model: host.CatalogPhotometry
+  pk: 21
   fields:
     name: DES_r_DR1_APER
-    filter: [DES_r]
-    catalog: [DES_DR1]
+    filter:
+    - DES_r
+    catalog:
+    - DES_DR1
     mag_column: rmag
     mag_error_column: e_rmag
 - model: host.CatalogPhotometry
+  pk: 22
   fields:
     name: DES_i_DR1_APER
-    filter: [DES_i]
-    catalog: [DES_DR1]
+    filter:
+    - DES_i
+    catalog:
+    - DES_DR1
     mag_column: imag
     mag_error_column: e_imag
 - model: host.CatalogPhotometry
+  pk: 23
   fields:
     name: DES_z_DR1_APER
-    filter: [DES_z]
-    catalog: [DES_DR1]
+    filter:
+    - DES_z
+    catalog:
+    - DES_DR1
     mag_column: zmag
     mag_error_column: e_zmag
 - model: host.CatalogPhotometry
+  pk: 24
   fields:
     name: DES_y_DR1_APER
-    filter: [DES_Y]
-    catalog: [DES_DR1]
+    filter:
+    - DES_Y
+    catalog:
+    - DES_DR1
     mag_column: ymag
     mag_error_column: e_ymag
