--- a/app/host/fixtures/test/setup_test_task_register.yaml
+++ b/app/host/fixtures/test/setup_test_task_register.yaml
@@ -1,24 +1,40 @@
 - model: host.TaskRegister
+  pk: 34
   fields:
-    transient: [2022testone]
-    task: [Host match]
-    status: [not processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2022testone
+    task:
+    - Host match
+    status:
+    - not processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
 - model: host.TaskRegister
+  pk: 35
   fields:
-    transient: [2022testtwo]
-    task: [Host match]
-    status: [not processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2022testtwo
+    task:
+    - Host match
+    status:
+    - not processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
 - model: host.TaskRegister
+  pk: 36
   fields:
-    transient: [2022testtwo]
-    task: [Cutout download]
-    status: [not processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2022testtwo
+    task:
+    - Cutout download
+    status:
+    - not processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
 - model: host.TaskRegister
+  pk: 37
   fields:
-    transient: [2022testone]
-    task: [Cutout download]
-    status: [not processed]
-    last_modified: 2000-01-23 01:23:45.678+00:00
+    transient:
+    - 2022testone
+    task:
+    - Cutout download
+    status:
+    - not processed
+    last_modified: 2000-01-23 01:23:45.678000+00:00
