--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,6 +11,7 @@ django-revproxy==0.12.0
 djangorestframework==3.15.2
 django-cron==0.6.0
 django-filter==24.2
+django-latexify
 mysqlclient==2.2.4
 dustmaps==1.0.13
 astro-sedpy==0.3.2
