--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,5 +13,5 @@ sphinx:
 
 python:
    install:
+   - requirements: docs/requirements.txt
    - requirements: app/requirements.txt
-   - requirements: app/requirements.large.txt
