--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,10 @@
-furo
-sphinx-copybutton
-django
-celery
-django_celery_beat
+Sphinx==7.3.7
+sphinx-copybutton==0.5.2
+sphinx-rtd-theme==2.0.0
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+furo==2024.1.29
